--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><title>index.md</title><style></style></head><body id="preview">
-<h1 class="code-line" data-line-start=0 data-line-end=1><a id="Software_as_a_Medical_Device_0"></a>Software as a Medical Device:</h1>
+<center><h1 class="code-line" data-line-start=0 data-line-end=1><a id="Software_as_a_Medical_Device_0"></a>Software as a Medical Device:</h1></center>
 <h2 class="code-line" data-line-start=1 data-line-end=2><a id="Regulating_AI_in_Healthcare_via_Responsible_AI_1"></a>Regulating AI in Healthcare via Responsible AI</h2>
 <h2 class="code-line" data-line-start=3 data-line-end=4><a id="KDD_2021__Tutorial_3"></a>KDD 2021 Tutorial</h2>
 <p class="has-line-data" data-line-start="5" data-line-end="6"><strong>Tutorial Presentors</strong></p>
 <ul>
 <li class="has-line-data" data-line-start="6" data-line-end="7">Muhammad Aurangzeb Ahmad <sup>1,2</sup></li>
-<li class="has-line-data" data-line-start="7" data-line-end="8">Dr. Carly Eckert M.D. 2,3</li>
-<li class="has-line-data" data-line-start="8" data-line-end="9">Christine Allen 2</li>
-<li class="has-line-data" data-line-start="9" data-line-end="10">Vikas Kumar 2,</li>
-<li class="has-line-data" data-line-start="10" data-line-end="12">Ankur Teredesai 2,5</li>
+<li class="has-line-data" data-line-start="7" data-line-end="8">Dr. Carly Eckert M.D. <sup>2,3</sup></li>
+<li class="has-line-data" data-line-start="8" data-line-end="9">Christine Allen <sup>2</sup></li>
+<li class="has-line-data" data-line-start="9" data-line-end="10">Vikas Kumar <sup>2</sup></li>
+<li class="has-line-data" data-line-start="10" data-line-end="12">Ankur Teredesai <sup>2,5</sup></li>
 </ul>
 <p class="has-line-data" data-line-start="12" data-line-end="13"><strong>Affiliations</strong></p>
 <ol>
@@ -19,7 +19,10 @@
 <li class="has-line-data" data-line-start="17" data-line-end="19">Department of Computer Science, Center for Data Science, University of Washington - Tacoma</li>
 </ol>
 <p class="has-line-data" data-line-start="19" data-line-end="20"><strong>Corresponding Author:</strong> Muhammad Aurangzeb Ahmad <a href="mailto:maahmad@uw.edu">maahmad@uw.edu</a></p>
-<h2 class="code-line" data-line-start=21 data-line-end=22><a id="Abstract_21"></a>Abstract</h2>
+
+<h2>Short Abstract</h2>
+
+<h2 class="code-line" data-line-start=21 data-line-end=22><a id="Abstract_21"></a>long Abstract</h2>
 <p class="has-line-data" data-line-start="22" data-line-end="23">Responsible AI is a fundamental requirement for application of AI and machine learning (ML) in healthcare. With the increased adoption of AI/ML in this domain, there is an increased recognition and demand to regulate AI/ML in healthcare to avoid potential harm and unfair bias against vulnerable populations. The regulatory bodies like the FDA, European Union’s GDPR, China’s New Generation AI Governance Expert Committee etc. have either promulgated or put forward regulatory frameworks for responsible AI. The challenge of implementing a responsible AI system which complies with potential regulations thus becomes a daunting task given the complexity of the problem. This is especially difficult for researchers and practitioners who are starting out or who may not have domain expertise in both healthcare and AI. A survey of the various regulations proposed by around a hundred governmental bodies and commissions as well as leaders in the tech sector like Google, Facebook, Amazon, Baidu etc. reveal that many of these proposals are short on specifics. This has also led to charges of ethics washing where guidelines for ethical or responsible AI are used as a cover to not invest in meaningful AI/ML infrastructure and systems. In this tutorial we offer a guide to help navigate through the complex regulations and explain the various constituent practical elements of a responsible AI system in healthcare in the light of proposed regulations. Additionally, we breakdown and emphasize that the recommendations from regulatory bodies like FDA or the EU are necessary but not sufficient elements of creating a responsible AI system.</p>
 <p class="has-line-data" data-line-start="24" data-line-end="25">In the tutorial we will elucidate how regulations and guidelines often focus on epistemic concerns to the detriment of practical concerns e.g., requirement for fairness without explicating what fairness constitutes in a given use case. We posit that responsible AI/ML in healthcare is a systems level problem. It constitutes the IT-infrastructure, the AI/ML components, healthcare delivery and services tied to the ML models, and monitoring the outcomes. Regulatory regimes have traditionally required expectation of well defined and somewhat deterministic behavior from software. AI/ML in general does not fit into this mold given the stochastic and probabilistic nature of such systems. Preliminary guidelines released by the FDA in early 2021 for AI/ML based software as a medical device (henceforth SaMD document) extends regulatory frameworks by incorporating pre-determined change control plans in software regulation i.e., defining beforehand the scope of what is likely to change in a model. In this tutorial we will go through a use case regarding what are the technical requirements for such a change control plan and what limitations it may have post-deployment.</p>
 <p class="has-line-data" data-line-start="26" data-line-end="27">FDA’s SaMD document and EU’s GDPR among other AI governance documents talk about the need for implementing sufficiently good machine learning practices. In this tutorial we seek to spell out what that would mean from a practical perspective for real world use cases in healthcare throughout the machine learning cycle i.e., Data Management, Data Specification, Feature Engineering, Model Evaluation, Model Specification, Model Explainability, Model Fairness, Reproducibility, checks for data leakage and model leakage. We will illustrate these with real world use cases and example code using open-source and publicly available datasets and libraries like InterpretML, ErrorAnalysis, fairMLHealth, fairLearn and AIF360. As an example, consider feature engineering which would need to address questions like, whether it is lossy vs. Lossless, how does data missingness look like, what features are available at runtime vs. training time etc.</p>
@@ -77,7 +80,7 @@
 <li class="has-line-data" data-line-start="67" data-line-end="68">Responsible AI beyond regulatory frameworks</li>
 <li class="has-line-data" data-line-start="68" data-line-end="69">Conclusion</li>
 </ul>
-<h2 class="code-line" data-line-start=71 data-line-end=72><a id="Tutor_Bios_71"></a>Tutor Bios</h2>
+<h2 class="code-line" data-line-start=71 data-line-end=72><a id="Tutor_Bios_71"></a>Bios</h2>
 <h3 class="code-line" data-line-start=72 data-line-end=73><a id="Muhammad_Aurangzeb_Ahmad_72"></a>Muhammad Aurangzeb Ahmad</h3>
 <p class="has-line-data" data-line-start="73" data-line-end="74">Muhammad Aurangzeb Ahmad is a Research Scientist at KenSci Inc. a Machine learning/AI healthcare informatics company focused on risk prediction in healthcare. He is also Affiliate Associate Professor in the Department of Computer Science at University of Washington Bothell. He has had academic appointments at University of Washington, Center for Cognitive Science at University of Minnesota, Minnesota Population Center, and the Indian Institute of Technology at Kanpur. He has published more than 50 research papers in top machine learning and data mining conferences KDD, AAAI, SDM, PAKDD etc.</p>
 <h3 class="code-line" data-line-start=75 data-line-end=76><a id="Dr_Carly_Eckert_MD_75"></a>Dr. Carly Eckert M.D</h3>
